{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 0,
  "lineage": "b0b7ee16-37ae-7451-b476-68de2a083e7b",
  "resources": [
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "qaelb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:854265026222:loadbalancer/app/qaelb/9211db91901df767",
            "arn_suffix": "app/qaelb/9211db91901df767",
            "dns_name": "qaelb-408695523.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:854265026222:loadbalancer/app/qaelb/9211db91901df767",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "qaelb",
            "security_groups": [
              "sg-075c9dab297b3d9d0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0418b31349ed5603f"
              },
              {
                "subnet_id": "subnet-04619a3354846d05b"
              }
            ],
            "subnets": [
              "subnet-0418b31349ed5603f",
              "subnet-04619a3354846d05b"
            ],
            "vpc_id": "vpc-081d883eb93544d17",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.Security_Groups.aws_security_group.SG_elb_http",
            "module.Subnets.aws_subnet.Public_Subnet_A",
            "module.Subnets.aws_subnet.Public_Subnet_B",
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:854265026222:listener/app/qaelb/9211db91901df767/7abb1126c320ac79",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:854265026222:targetgroup/TargetGroup-for-QA-and-HTTP/f467fb8c7a576430",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:854265026222:listener/app/qaelb/9211db91901df767/7abb1126c320ac79",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:854265026222:loadbalancer/app/qaelb/9211db91901df767",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_lb.qaelb",
            "module.Security_Groups.aws_security_group.SG_elb_http",
            "module.Subnets.aws_subnet.Public_Subnet_A",
            "module.Subnets.aws_subnet.Public_Subnet_B",
            "module.TG_Attachment.aws_lb_target_group.tg_qa",
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0ad6b70e61be944",
            "arn": "arn:aws:ec2:us-east-2:854265026222:instance/i-0958a9d6731764255",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0958a9d6731764255",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0266c06fef9ea3be2",
            "private_dns": "ip-192-168-30-40.us-east-2.compute.internal",
            "private_ip": "192.168.30.40",
            "public_dns": "ec2-3-138-122-161.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.122.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02a3ebb23f2eaca26",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3d0c4ce593d8ff1",
            "tags": {
              "Ambiente": "QA",
              "Name": "Server1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-090e1a711ecfa296e"
            ]
          },
          "dependencies": [
            "module.Key_pair.aws_key_pair.Key_pair",
            "module.Security_Groups.aws_security_group.SG_elb_http",
            "module.Security_Groups.aws_security_group.SG_ssh_http",
            "module.Subnets.aws_subnet.Private_Subnet_A",
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0ad6b70e61be944",
            "arn": "arn:aws:ec2:us-east-2:854265026222:instance/i-012cbf2cf959e9128",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012cbf2cf959e9128",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bbd350abef3d766d",
            "private_dns": "ip-192-168-30-54.us-east-2.compute.internal",
            "private_ip": "192.168.30.54",
            "public_dns": "ec2-13-58-54-94.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.54.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-057dd247d5c66b8a6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee09bf5103bd9ca3",
            "tags": {
              "Ambiente": "QA",
              "Name": "Server2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-090e1a711ecfa296e"
            ]
          },
          "dependencies": [
            "module.Key_pair.aws_key_pair.Key_pair",
            "module.Security_Groups.aws_security_group.SG_elb_http",
            "module.Security_Groups.aws_security_group.SG_ssh_http",
            "module.Subnets.aws_subnet.Private_Subnet_B",
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EIP",
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07793d493904d8108",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-19-233-148.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.233.148",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Internet_Gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Kikeman_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:854265026222:internet-gateway/igw-01f378a986efc3667",
            "id": "igw-01f378a986efc3667",
            "owner_id": "854265026222",
            "tags": {
              "Name": "Kikeman_IGW"
            },
            "vpc_id": "vpc-081d883eb93544d17"
          },
          "dependencies": [
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.NAT_GW",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_qa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07793d493904d8108",
            "id": "nat-0ce7824eee2ebdf0f",
            "network_interface_id": "eni-031ae8199329d36c7",
            "private_ip": "192.168.30.8",
            "public_ip": "3.19.233.148",
            "subnet_id": "subnet-04619a3354846d05b"
          },
          "dependencies": [
            "module.EIP.aws_eip.one",
            "module.Subnets.aws_subnet.Public_Subnet_A",
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Route_Table_Association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_Association_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029e37f425995c046",
            "route_table_id": "rtb-0f5cc12712d1ce06e",
            "subnet_id": "subnet-0b3d0c4ce593d8ff1"
          },
          "dependencies": [
            "module.EIP.aws_eip.one",
            "module.NAT_GW.aws_nat_gateway.nat_gw_qa",
            "module.Route_Tables.aws_route_table.Private_Route",
            "module.Subnets.aws_subnet.Private_Subnet_A",
            "module.Subnets.aws_subnet.Public_Subnet_A",
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Route_Table_Association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_Association_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2a9fd9875691777",
            "route_table_id": "rtb-0f5cc12712d1ce06e",
            "subnet_id": "subnet-0ee09bf5103bd9ca3"
          },
          "dependencies": [
            "module.EIP.aws_eip.one",
            "module.NAT_GW.aws_nat_gateway.nat_gw_qa",
            "module.Route_Tables.aws_route_table.Private_Route",
            "module.Subnets.aws_subnet.Private_Subnet_B",
            "module.Subnets.aws_subnet.Public_Subnet_A",
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Route_Table_Association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_Association_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f8a58e506da0f9e",
            "route_table_id": "rtb-0c5d356626c440635",
            "subnet_id": "subnet-04619a3354846d05b"
          },
          "dependencies": [
            "module.Internet_Gateway.aws_internet_gateway.Kikeman_IGW",
            "module.Route_Tables.aws_route_table.Public_Route",
            "module.Subnets.aws_subnet.Public_Subnet_A",
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Route_Table_Association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_Association_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ed53defcb2180d5",
            "route_table_id": "rtb-0c5d356626c440635",
            "subnet_id": "subnet-0418b31349ed5603f"
          },
          "dependencies": [
            "module.Internet_Gateway.aws_internet_gateway.Kikeman_IGW",
            "module.Route_Tables.aws_route_table.Public_Route",
            "module.Subnets.aws_subnet.Public_Subnet_B",
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Route_Tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f5cc12712d1ce06e",
            "owner_id": "854265026222",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ce7824eee2ebdf0f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_Route"
            },
            "vpc_id": "vpc-081d883eb93544d17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EIP.aws_eip.one",
            "module.NAT_GW.aws_nat_gateway.nat_gw_qa",
            "module.Subnets.aws_subnet.Public_Subnet_A",
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Route_Tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c5d356626c440635",
            "owner_id": "854265026222",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f378a986efc3667",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Route"
            },
            "vpc_id": "vpc-081d883eb93544d17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Internet_Gateway.aws_internet_gateway.Kikeman_IGW",
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Security_Groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_elb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:854265026222:security-group/sg-075c9dab297b3d9d0",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075c9dab297b3d9d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG_elb_http",
            "name_prefix": "",
            "owner_id": "854265026222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Ambiente": "QA",
              "Name": "qaelb"
            },
            "timeouts": null,
            "vpc_id": "vpc-081d883eb93544d17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Security_Groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:854265026222:security-group/sg-090e1a711ecfa296e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090e1a711ecfa296e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-075c9dab297b3d9d0"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-075c9dab297b3d9d0"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "SG-ssh-http",
            "name_prefix": "",
            "owner_id": "854265026222",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-081d883eb93544d17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security_Groups.aws_security_group.SG_elb_http",
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Subnet_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:854265026222:subnet/subnet-0b3d0c4ce593d8ff1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.30.32/28",
            "id": "subnet-0b3d0c4ce593d8ff1",
            "map_public_ip_on_launch": false,
            "owner_id": "854265026222",
            "tags": {
              "Ambiente": "QA",
              "Name": "Private_Subnet_A"
            },
            "vpc_id": "vpc-081d883eb93544d17"
          },
          "dependencies": [
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Subnet_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:854265026222:subnet/subnet-0ee09bf5103bd9ca3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.30.48/28",
            "id": "subnet-0ee09bf5103bd9ca3",
            "map_public_ip_on_launch": false,
            "owner_id": "854265026222",
            "tags": {
              "Ambiente": "QA",
              "Name": "Private_Subnet_B"
            },
            "vpc_id": "vpc-081d883eb93544d17"
          },
          "dependencies": [
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:854265026222:subnet/subnet-04619a3354846d05b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.30.0/28",
            "id": "subnet-04619a3354846d05b",
            "map_public_ip_on_launch": false,
            "owner_id": "854265026222",
            "tags": {
              "Ambiente": "QA",
              "Name": "Public_Subnet_A"
            },
            "vpc_id": "vpc-081d883eb93544d17"
          },
          "dependencies": [
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:854265026222:subnet/subnet-0418b31349ed5603f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.30.16/28",
            "id": "subnet-0418b31349ed5603f",
            "map_public_ip_on_launch": false,
            "owner_id": "854265026222",
            "tags": {
              "Ambiente": "QA",
              "Name": "Public_Subnet_B"
            },
            "vpc_id": "vpc-081d883eb93544d17"
          },
          "dependencies": [
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.TG_Attachment",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_qa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:854265026222:targetgroup/TargetGroup-for-QA-and-HTTP/f467fb8c7a576430",
            "arn_suffix": "targetgroup/TargetGroup-for-QA-and-HTTP/f467fb8c7a576430",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:854265026222:targetgroup/TargetGroup-for-QA-and-HTTP/f467fb8c7a576430",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TargetGroup-for-QA-and-HTTP",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "TG_QA"
            },
            "target_type": "instance",
            "vpc_id": "vpc-081d883eb93544d17"
          },
          "dependencies": [
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.TG_Attachment",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG_Atacchment_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:854265026222:targetgroup/TargetGroup-for-QA-and-HTTP/f467fb8c7a576430-20210114164805814600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:854265026222:targetgroup/TargetGroup-for-QA-and-HTTP/f467fb8c7a576430",
            "target_id": "i-0958a9d6731764255"
          },
          "dependencies": [
            "module.EC2.aws_instance.server1",
            "module.Key_pair.aws_key_pair.Key_pair",
            "module.Security_Groups.aws_security_group.SG_elb_http",
            "module.Security_Groups.aws_security_group.SG_ssh_http",
            "module.Subnets.aws_subnet.Private_Subnet_A",
            "module.TG_Attachment.aws_lb_target_group.tg_qa",
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.TG_Attachment",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG_Atacchment_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:854265026222:targetgroup/TargetGroup-for-QA-and-HTTP/f467fb8c7a576430-20210114164805863700000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:854265026222:targetgroup/TargetGroup-for-QA-and-HTTP/f467fb8c7a576430",
            "target_id": "i-012cbf2cf959e9128"
          },
          "dependencies": [
            "module.EC2.aws_instance.server2",
            "module.Key_pair.aws_key_pair.Key_pair",
            "module.Security_Groups.aws_security_group.SG_elb_http",
            "module.Security_Groups.aws_security_group.SG_ssh_http",
            "module.Subnets.aws_subnet.Private_Subnet_B",
            "module.TG_Attachment.aws_lb_target_group.tg_qa",
            "module.VPC.aws_vpc.kikeman_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kikeman_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:854265026222:vpc/vpc-081d883eb93544d17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.30.0/24",
            "default_network_acl_id": "acl-0171f4e99565d4bb6",
            "default_route_table_id": "rtb-035edcaaee90e9829",
            "default_security_group_id": "sg-004bb7ee8006eaaf5",
            "dhcp_options_id": "dopt-d049d4bb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-081d883eb93544d17",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-035edcaaee90e9829",
            "owner_id": "854265026222",
            "tags": {
              "Name": "kikeman_vpc"
            }
          }
        }
      ]
    }
  ]
}